fixed picture overlap

--- a/topic.css
+++ b/topic.css
@@ -1,5 +1,27 @@
-.row {
-    height: 210px;
+/*.row {*/
+/*    height: 210px;*/
+/*}*/
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    /*background-color: #07575B;*/
+}
+
+h2 {
+    margin: 40px;
+}
+
+.blueBorder {
+    border-top: 3px solid #66A5AD;
+    width: 75%;
+}
+
+.jumbotron {
+    margin-top: 0px;
+    background: #66A5AD center;
+    color: white;
 }
 
 .view {
